--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: sample_app_development
   pool: 5
-  username: sample_app
+  username: adrianchen
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,7 +48,7 @@ test:
   encoding: unicode
   database: sample_app_test
   pool: 5
-  username: sample_app
+  username: adrianchen
   password:
 
 production:
